--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,17 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Face Attendance</title>
+</head>
+<body>
+  <h1>Face Attendance System</h1>
+  <video id="video" width="320" height="240" autoplay></video>
+  <br/>
+  <input type="text" id="phone" placeholder="Enter Phone Number" />
+  <br/>
+  <button onclick="register()">Register</button>
+  <button onclick="markAttendance()">Mark Attendance</button>
+  <script src="app.js"></script>
+</body>
+</html>
