--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,23 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Face Attendance</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Face Recognition Attendance</title>
 </head>
 <body>
-  <h1>Face Attendance System</h1>
-  <video id="video" width="320" height="240" autoplay></video>
-  <br/>
-  <input type="text" id="phone" placeholder="Enter Phone Number" />
-  <br/>
-  <button onclick="register()">Register</button>
-  <button onclick="markAttendance()">Mark Attendance</button>
-  <script src="app.js"></script>
+    <h1>Face Recognition Attendance System</h1>
+    
+    <h2>Register Face</h2>
+    <input type="file" id="registerImage" />
+    <input type="text" id="phoneNumber" placeholder="Enter phone number" />
+    <button onclick="registerFace()">Register Face</button>
+
+    <h2>Mark Attendance</h2>
+    <input type="file" id="attendanceImage" />
+    <input type="text" id="attendancePhoneNumber" placeholder="Enter phone number" />
+    <button onclick="markAttendance()">Mark Attendance</button>
+
+    <script src="app.js"></script>
 </body>
 </html>
